--- a/calculator.html
+++ b/calculator.html
@@ -1,255 +1,274 @@
 <!DOCTYPE html>
 <html>
-
   <head>
-    <title>Calculator</title>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-    />
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
-      body{
-        border-color: #0f0000;
-      }
-      button {
-                width: 100%;
-                height: 70px;
-                font-size: 24px;
-                background-color: white;
-                border: none;
-            }
-
-            input {
-                height: 120px;
-                font-size: 40px;
-                vertical-align: bottom;
-                text-align: right;
-                padding-right: 16px;
-                background-color: #ececec;
-            }
-
-            table {
-                width: 40%;
-                border-color: #0f0000;
-            }
-            .container {
-                width: 320px;
-                background-color: white;
-                margin: 120px auto;
-            }
-
-    </style>
-
+      />
+    <link rel="stylesheet" href="./style.css"/>
+    <title>Scientific Calculator</title>
   </head>
-
   <body>
-    <div class="container">
-      <table>
-
+    <div class="main">
+      <table class="table table-bordered text-center ">
         <tr>
           <td colspan="5">
-            <input id="result" type="text" value="0" disabled>
+            <input type="text" id="inputlabel" placeholder="0" />
           </td>
         </tr>
-
         <tr>
-          <td>
-            <button id="deg">DEG</button>
-          </td>
-          <td>
-            <button id="fe">F-E</button>
-          </td>
-          <td colspan="3"></td>
+          <td  onclick="calculate('deg')">DEG</td>
+          <td  onclick="calculate('F')">F-E</td>
         </tr>
-
         <tr>
-          <td>
-            <button id="sin">Sin</button>
-          </td>
-          <td>
-            <button id="cos">Cos</button>
-          </td>
-          <td>
-            <button id="tan">Tan</button>
-          </td>
-          <td>
-            <button id="csc">Cosec</button>
-          </td>
-          <td>
-            <button id="sec">Sec</button>
-          </td>
+          <td ><button class="border-0" onclick="memory('mclear')">MC</button></td>
+          <td ><button class="border-0" onclick="memory('mrecall')">MR</button></td>
+          <td ><button class="border-0" onclick="memory('mplus')">M+</button></td>
+          <td ><button class="border-0" onclick="memory('msub')">M-</button></td>
+          <td ><button class="border-0" onclick="memory('mstore')">MS</button></td>
         </tr>
-
         <tr>
-          <td>
-            <button id="mc">MC</button>
-          </td>
-          <td>
-            <button id="mr">MR</button>
-          </td>
-          <td>
-            <button id="mplus">M+</button>
-          </td>
-          <td>
-            <button id="mminus">M-</button>
-          </td>
-          <td>
-            <button id="ms">MS</button>
-          </td>
-        </tr>
+            <td colspan="2" class="dropdown">
+                <button
+                  class="dropdown-toggle border-0"
+                  data-bs-toggle="dropdown"
+                >
+                  <small> &#402;&nbsp; Functions</small>
+                </button>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="#" onclick="calculate('floor ')"
+                      >floor</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#" onclick="calculate('ceil ')"
+                      >ceil</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#" onclick="calculate('round ')"
+                      >round</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#" onclick="calculate('sign ')"
+                      >sign</a
+                    >
+                  </li>
+                </ul>
+              </td>
 
-        <tr>
-          <td>
-            <button id="xcube">x<sup>3</sup></button>
+          <td colspan="2" class="dropdown">
+            <button
+              class="dropdown-toggle border-0"
+              data-bs-toggle="dropdown"
+            >
+              <small> &#9727; Trigonometry</small>
+            </button>
+            <ul class="dropdown-menu">
+              <li>
+                <a class="dropdown-item" href="#" onclick="calculate('sin ')">
+                  Sin
+                </a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="#" onclick="calculate('cos ')"> 
+                  Cos</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="#" onclick="calculate('tan ')">
+                    Tan</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="#" onclick="calculate('cosec ')">
+                    Cosec</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="#" onclick="calculate('sec ')">
+                    Sec</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="#" onclick="calculate('cot ')">
+                    Cot</a>
+              </li>
+            </ul>
           </td>
-          <td>
-            <button id="yrootx">y√x</button>
-          </td>
-          <td>
-            <button id="asinh">asinh</button>
-          </td>
-          <td>
-            <button id="acosh">acosh</button>
-          </td>
-          <td>
-            <button id="atanh">aTanh</button>
-          </td>
-        </tr>
-
-
-        <tr>
           
-          <td>
-            <button id="cube">∛x</button>
-          </td>
-          <td>
-            <button id="pi">Pi</button>
-          </td>
-          <td>
-            <button id="e">e</button>
-          </td>
-          <td>
-            <button id="c">AC</button>
-          </td>
-          <td>
-            <button id="delete">⇦</button>
-          </td>
         </tr>
-
+        <tr>
+          <td class="dropdown">
+            <button
+              class="dropdown-toggle border-0"
+              data-bs-toggle="dropdown"
+            >
+              2<sup>nd</sup>
+            </button>
+            <ul class="dropdown-menu">
+              <li>
+                <a class="dropdown-item" href="#" onclick="calculate('^3')">
+                    x<sup>3</sup></a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="#" onclick="calculate('∛')">
+                    ∛x</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="#" onclick="calculate('asinh ')">
+                    asinh</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="#" onclick="calculate('acosh ')">
+                    acosh</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="#" onclick="calculate('atanh ')">
+                    atanh</a>
+              </li>
+            </ul>
+          </td>
+          <td><button class="border-0" onclick="calculate(3.14)">&pi;</button></td>
+          <td><button class="border-0" onclick="calculate(2.718)">e</button></td>
+          <td><button class="border-0" onclick="clr()">AC</button></td>
+          <td><button class="border-0" onclick="del()">&#x2190; </button></td>
+        </tr>
         <tr>
           <td>
-            <button id="square">x<sup>2</sup></button>
+            <button class="border-0" onclick="calculate(`^2`)">
+              x<sup>2</sup>
+            </button>
           </td>
           <td>
-            <button id="root">1/x</button>
+            <button class="border-0" onclick="reciprocal()">1/x</button>
           </td>
           <td>
-            <button id="mode">|x|</button>
+            <button class="border-0" onclick="calculate('|')">| x |</button>
           </td>
           <td>
-            <button id="exp">exp</button>
+            <button class="border-0" onclick="calculate('e')">exp</button>
           </td>
           <td>
-            <button id="mod">mod</button>
+            <button class="border-0" onclick="calculate('%')">mod</button>
           </td>
         </tr>
-
-        <tr>
-          
-          <td>
-            <button id="sqrt">√x</button>
-          </td>
-          <td>
-            <button id="openbracket">(</button>
-          </td>
-          <td>
-            <button id="closebracket">)</button>
-          </td>
-          <td>
-            <button id="factorial">X!</button>
-          </td>
-          <td>
-            <button id="divide">/</button>
-          </td>
-        </tr>
-
         <tr>
           <td>
-            <button id="powery">x<sup>y</sup></button>
+            <button class="border-0" onclick="calculate('√')">
+              <span>√x</span>
+            </button>
           </td>
           <td>
-            <button id="seven">7</button>
+            <button class="border-0" onclick="calculate('(')">(</button>
           </td>
           <td>
-            <button id="eight">8</button>
+            <button class="border-0" onclick="calculate(')')">)</button>
           </td>
           <td>
-            <button id="nine">9</button>
+            <button class="border-0" onclick="calculate('!')">X!</button>
           </td>
           <td>
-            <button id="multiply">*</button>
+            <button class="border-0" onclick="calculate('/')">÷</button>
           </td>
         </tr>
-
         <tr>
           <td>
-            <button id="base10">10<sup>x</sup></button>
+            <button class="border-0" onclick="calculate('^')">
+              x<sup>y</sup>
+            </button>
+          </td>
+          <td >
+            <button style="border: none" onclick="calculate(7)">
+              7
+            </button>
+          </td>
+          <td >
+            <button style="border: none" onclick="calculate(8)">
+              8
+            </button>
+          </td>
+          <td >
+            <button style="border: none" onclick="calculate(9)">
+              9
+            </button>
           </td>
           <td>
-            <button id="four">4</button>
-          </td>
-          <td>
-            <button id="five">5</button>
-          </td>
-          <td>
-            <button id="six">6</button>
-          </td>
-          <td>
-            <button id="subtract">-</button>
+            <button class="border-0" onclick="calculate('*')">X</button>
           </td>
         </tr>
-
         <tr>
           <td>
-            <button id="log">log</button>
+            <button class="border-0" onclick="calculate('10^')">
+              10<sup>x</sup>
+            </button>
+          </td>
+          <td >
+            <button style="border: none" onclick="calculate(4)">
+              4
+            </button>
+          </td>
+          <td >
+            <buttonc style="border: none" onclick="calculate(5)">
+              5
+            </button>
+          </td>
+          <td >
+            <button style="border: none" onclick="calculate(6)">
+              6
+            </button>
           </td>
           <td>
-            <button id="one">1</button>
-          </td>
-          <td>
-            <button id="two">2</button>
-          </td>
-          <td>
-            <button id="three">3</button>
-          </td>
-          <td>
-            <button id="addition">+</button>
+            <button class="border-0" onclick="calculate('-')">-</button>
           </td>
         </tr>
-
         <tr>
           <td>
-            <button id="ln">ln</button>
+            <button class="border-0" onclick="calculate('log')">log</button>
+          </td>
+          <td >
+            <button style="border: none" onclick="calculate(1)">
+              1
+            </button>
+          </td>
+          <td >
+            <button style="border: none" onclick="calculate(2)">
+              2
+            </button>
+          </td>
+          <td >
+            <button style="border: none" onclick="calculate(3)">
+              3
+            </button>
           </td>
           <td>
-            <button id="sign">+/-</button>
-          </td>
-          <td>
-            <button id="zero">0</button>
-          </td>
-          <td>
-            <button id="dot">.</button>
-          </td>
-          <td>
-            <button id="equal">=</button>
+            <button class="border-0" onclick="calculate('+')">+</button>
           </td>
         </tr>
+        <tr>
+          <td>
+            <button class="border-0" onclick="calculate('ln')">ln</button>
+          </td>
+          <td>
+            <button class="border-0" onclick="calculate('-')">+/-</button>
+          </td>
+          <td >
+            <button style="border: none" onclick="calculate(0)">
+              0
+            </button>
+          </td>
+          <td>
+            <button class="border-0" onclick="calculate('.')">.</button>
+          </td>
 
+          <td>
+            <button class="border-0" onclick="Result()">=</button>
+          </td>
+        </tr>
       </table>
     </div>
-    <script src="calc.js"></script>
-  </body>
 
+    <script src="./script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
