--- a/calculator.html
+++ b/calculator.html
@@ -268,7 +268,6 @@
       </table>
     </div>
 
-    <script src="./script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./calc.js"></script>
   </body>
 </html>
