--- a/calculator.html
+++ b/calculator.html
@@ -32,7 +32,7 @@
         <tr>
             <td colspan="2" class="dropdown">
                 <button
-                  class="dropdown-toggle border-0"
+                  class="dropdown-toggle border-0 p-0"
                   data-bs-toggle="dropdown"
                 >
                   <small> &#402;&nbsp; Functions</small>
@@ -269,5 +269,6 @@
     </div>
 
     <script src="./calc.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>"
   </body>
 </html>
