--- a/calculator.html
+++ b/calculator.html
@@ -39,22 +39,22 @@
                 </button>
                 <ul class="dropdown-menu">
                   <li>
-                    <a class="dropdown-item" href="#" onclick="calculate('floor ')"
+                    <a class="dropdown-item" href="#" onclick="floor()"
                       >floor</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" onclick="calculate('ceil ')"
+                    <a class="dropdown-item" href="#" onclick="ceil()"
                       >ceil</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" onclick="calculate('round ')"
+                    <a class="dropdown-item" href="#" onclick="round()"
                       >round</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" onclick="calculate('sign ')"
+                    <a class="dropdown-item" href="#" onclick="sign()"
                       >sign</a
                     >
                   </li>
@@ -70,28 +70,28 @@
             </button>
             <ul class="dropdown-menu">
               <li>
-                <a class="dropdown-item" href="#" onclick="calculate('sin ')">
+                <a class="dropdown-item" href="#" id="sin" onclick="sin()">
                   Sin
                 </a>
               </li>
               <li>
-                <a class="dropdown-item" href="#" onclick="calculate('cos ')"> 
+                <a class="dropdown-item" href="#" id="cos" onclick="cos()"> 
                   Cos</a>
               </li>
               <li>
-                <a class="dropdown-item" href="#" onclick="calculate('tan ')">
+                <a class="dropdown-item" href="#" id="tan" onclick="tan()">
                     Tan</a>
               </li>
               <li>
-                <a class="dropdown-item" href="#" onclick="calculate('cosec ')">
+                <a class="dropdown-item" href="#" onclick="cosec()">
                     Cosec</a>
               </li>
               <li>
-                <a class="dropdown-item" href="#" onclick="calculate('sec ')">
+                <a class="dropdown-item" href="#" onclick="sec()">
                     Sec</a>
               </li>
               <li>
-                <a class="dropdown-item" href="#" onclick="calculate('cot ')">
+                <a class="dropdown-item" href="#" onclick="cot()">
                     Cot</a>
               </li>
             </ul>
@@ -269,6 +269,6 @@
     </div>
 
     <script src="./calc.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>"
+    <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>"
   </body>
 </html>
